--- a/Organ.AI/Info.plist
+++ b/Organ.AI/Info.plist
@@ -62,5 +62,10 @@
 	</array>
 	<key>NSCalendarsUsageDescription</key>
 	<string>I want to use</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
