--- a/Organ.AI/Info.plist
+++ b/Organ.AI/Info.plist
@@ -69,5 +69,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSContactsUsageDescription</key>
+	<string>Accessing contact</string>
 </dict>
 </plist>
