--- a/Organ.AI/GoogleService-Info.plist
+++ b/Organ.AI/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>485313206866-gkcc0vhuc1k3hmq4ornn188u64ced1a4.apps.googleusercontent.com</string>
+	<string>405553763812-qlp6ct0ap8038v77mpbm1dteoj9p5lo7.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.485313206866-gkcc0vhuc1k3hmq4ornn188u64ced1a4</string>
+	<string>com.googleusercontent.apps.405553763812-qlp6ct0ap8038v77mpbm1dteoj9p5lo7</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAz4ih-lCvrClPgwnygp12KHlyI9aLkkuo</string>
+	<string>AIzaSyAXlglrB5lMMFOMbj2pULnELvk_cYfYPp4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>485313206866</string>
+	<string>405553763812</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>Organ.AI.Organ-AI</string>
 	<key>PROJECT_ID</key>
-	<string>organai-app</string>
+	<string>organai-service</string>
 	<key>STORAGE_BUCKET</key>
-	<string>organai-app.appspot.com</string>
+	<string>organai-service.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:485313206866:ios:f93a30a8c83035e9e6dd8b</string>
+	<string>1:405553763812:ios:34c9f26179601a701523f1</string>
 	<key>DATABASE_URL</key>
-	<string>https://organai-app.firebaseio.com</string>
+	<string>https://organai-service.firebaseio.com</string>
 </dict>
 </plist>
